--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,7 @@
 
 :root {
     --icon-size: 24px;
-    --primary-color: #4285f4;
+    --primary-color: #7A42FF;
     --peer-width: 120px;
     color-scheme: light dark;
 }
